Fix navigation bar on small screens

--- a/templates/style.css
+++ b/templates/style.css
@@ -65,32 +65,20 @@ div.centered h2, div.centered .thumbnails, div.centered p {
   vertical-align: middle;
 }
 
-.header {
-  width: 100%;
-  height: 200px;
+/* Navbar */
+.navbar {
+  min-height: 170px;
+  margin-bottom: 30px;
 }
 
-.header-left {
-  width: 30%; 
-  display: inline-block;
+/* Remove focus from navbar button when clicked */
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
 }
-
-.header-right {
-  width: 70%; 
-  display: inline-block; 
-  vertical-align: middle;
-}
-
-.nav-buttons {
-  float: right;
-}
-
-.logo {
-  /*max-width: 20%;
-  width: 310px;
-  min-width: 200px;*/
-  margin-top: 15px;
-}
+/* End Navbar*/
 
 .carousel-indicators li {
   width: 10px;
@@ -506,6 +494,17 @@ footer p {
   }  
   .contact-us-component-leftmost {
     margin-left: 2%;
+  }
+  .remaining-height {
+    height: calc(100vh - 130px);
+  }
+  .logo {
+    content: url(../assets/images/logo_all_white_mobile.png);
+  }
+  .navbar {
+    min-height: 0px;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
   @media screen and (max-width: 500px) {
